fix: truncate title client side

--- a/frappe/public/less/notifications.less
+++ b/frappe/public/less/notifications.less
@@ -100,15 +100,6 @@ a.unseen:hover .mark-read {
 	margin-bottom: 10px;
 }
 
-.divider-dot {
-	height: 5px;
-	width: 5px;
-	margin: 0 2px;
-    background-color: #99a4af;
-    border-radius: 50%;
-    display: inline-block;
-}
-
 .user-avatar {
 	float: left;
 	margin-right: 10px;
